[package]
name = "rust-alpine-dev"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bcrypt = "0.17.1"
chrono = "0.4.41"
once_cell = "1.21.3"
serde = "1.0.219"
serde_json = "1.0.143"
surrealdb = "2.3.7"
thiserror = "2.0.15"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = "9.0.2"
uuid = "1.18.0"
